# webrtc-core

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  LICENSE  PARITY_CHECKLIST.md  PRODUCTION_READINESS.md  README.md  TESTING.md  TRANSFORMATION_SUMMARY.md
.cargo/: config.toml
benches/: concurrency.rs  latency.rs  throughput.rs
examples/: bench_high_perf.rs  discord_clone.rs  dtls_example.rs  e2ee_example.rs  full_stack_demo.rs  ice_example.rs  rtp_example.rs  sdp_example.rs  video_example.rs
ffi/: Cargo.toml  README.md
ffi/include/: webrtc-core.h
ffi/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: byte_ring.rs  index_ring.rs  latency_ring.rs  rtcp.rs  sdp.rs  slab.rs
scripts/: ffi_asan.sh  ffi_valgrind.sh  profile_flamegraph.sh  profile_perf.sh  run_fuzz.sh  run_miri.sh
src/: affinity.rs  byte_ring.rs  clock.rs  dtls.rs  dtls_key.rs  engine_handle.rs  engine_shard.rs  index_ring.rs  jitter_buffer.rs  latency_ring.rs  lib.rs  main.rs  media_engine.rs  packet.rs  rtcp_queue.rs  session.rs  slab.rs  srtp.rs
src/audio/: mod.rs
src/cc/: aimd.rs  gcc.rs  mod.rs  probe_controller.rs  twcc_aggregator.rs
src/codecs/: mod.rs
src/datachannel/: mod.rs
src/dtls/: handshake.rs  mod.rs
src/e2ee/: mod.rs  sframe.rs
src/events/: mod.rs
src/ice/: agent.rs  candidate.rs  mod.rs  stun.rs  stun_client.rs
src/observability/: metrics.rs  mod.rs
src/pacer/: mod.rs
src/pc/: configuration.rs  mod.rs  peer_connection.rs  sdp.rs  stats.rs  transceiver.rs
src/rtcp/: extended.rs  feedback.rs  mod.rs  remb.rs
tests/: integration_test.rs  miri_test.rs
(+17 files in other folders)
