[package]
name = "webrtc-core"
version = "0.6.5"
edition = "2021"
authors = ["xbl1e"]
description = "Sub-microsecond WebRTC media core with zero-copy architecture"
license = "MIT"
repository = "https://github.com/xbl1e/webrtc-core"
readme = "README.md"
keywords = ["webrtc", "rtc", "media", "network"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time", "net"] }
thiserror = "1.0"
bytes = "1.4"
aes-gcm = "0.10"
ring = "0.16"
parking_lot = "0.12"
crossbeam-utils = "0.8"
once_cell = "1.20"
anyhow = "1.0"
crossbeam-channel = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["sched", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }
windows-sys = { version = "0.48" }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
